syntax = "proto3";

package recordcleaner;

option go_package = "github.com/brotherlogic/recordcleaner/proto";

message Config {
  map<int32, int64> last_clean_time = 1;
  int32 current_count = 2;
  
  int64 last_water = 3;
  int64 last_filter = 4;

  int32 day_of_year = 5;
  int32 day_count = 6;

  int32 current_box_pick = 7;
}

message GetCleanRequest {
  bool include_seen = 1;
}

message GetCleanResponse {
  int32 instance_id = 1;
  repeated int32 seen = 2;
}

message ServiceRequest {
  bool water = 1;
  bool fileter = 2;
}

message ServiceResponse {}

service RecordCleanerService {
  rpc GetClean(GetCleanRequest) returns (GetCleanResponse) {};
  rpc Service(ServiceRequest) returns (ServiceResponse) {};
}